--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </header>
       <section class="bg-dark ">
         <div class="container ">
-          <div class="row move mx-3" id="rowData">
+          <div class="row move mx-lg-3" id="rowData">
 
 
 
